<resources>
    <string name="app_name">Karaok!</string>
    <string name="enter_welcome">立即体验</string>
    <string name="enter_slogan_1">登录</string>
    <string name="enter_slogan_2">Karaok</string>
    <string name="enter_slogan_3">!</string>
    <string name="enter_slogan_4">唱出你的精彩</string>
    <string name="enter_or">或</string>
    <string name="enter_otherlogin">更多登录方式</string>
    <string name="enter_protocoltip">·继续代表您同意《<u>Karaok!用户协议</u>》</string>
    <string name="enter_protocol">用户协议</string>
    <string name="enter_regist_info">信息录入</string>
    <string name="enter_regist_info_upavater">更换头像</string>
    <string name="enter_regist_info_unick">昵称</string>
    <string name="enter_regist_info_unick_hint">请输入昵称</string>
    <string name="enter_regist_info_birthday_hint">请选择出生年月</string>
    <string name="enter_regist_info_address_hint">请选择地域</string>
    <string name="enter_regist_info_submit">输入确认</string>
    <string name="enter_nation_cn">中国</string>
    <string name="enter_nation_jp">日本</string>
    <string name="language_title">选择语言</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">英语</string>
    <string name="language_jp">日本语</string>
    <string name="main_discover">发现</string>
    <string name="hall_classfiy">曲名选曲</string>
    <string name="hall_years_ago">年代</string>
    <string name="hall_theme">主题</string>
    <string name="hall_chorus">合唱</string>
    <string name="hall_live">直播</string>
    <string name="hall_hotrecom">热榜推荐</string>
    <string name="hall_guessyoulike">猜你喜欢</string>
    <string name="hall_newstart">新歌首发</string>
    <string name="hall_comment">评分</string>
    <string name="hall_kge">K歌</string>
    <string name="hall_erasure">消音</string>
    <string name="search_titlename">搜索</string>
    <string name="search_refer_hint">搜索歌曲/歌手</string>
    <string name="search_refer_common_singer">常用歌手</string>
    <string name="search_refer_empty">清空搜索历史</string>
    <string name="search_result_sorry">抱歉！</string>
    <string name="search_result_none">没有找到相关的结果...</string>
    <string name="search_result_cappella">找不到想要的伴奏？</string>
    <string name="search_result_feekback">我要反馈</string>
    <string name="search_result_original">原版伴奏</string>
    <string name="search_result_loadmore">加载更多</string>
    <string name="search_result_original_end">所有原版伴奏加载完毕</string>
    <string name="search_result_erasure">消音伴奏</string>
    <string name="search_result_frominternet">以下内容来自互联网</string>
    <string name="banner_special">往期专题推荐</string>
    <string name="singer_selecsongs">歌手选曲</string>
    <string name="singer_havesome_singer">已点歌手</string>
    <string name="singer_all">全部歌手</string>
    <string name="singer_popularchorus">人气合唱</string>
    <string name="singer_music_all">全部歌曲</string>
    <string name="singer_type">歌手类型</string>
    <string name="singer_out">海外歌手</string>
    <string name="category_all">分类</string>
    <string name="category_history">历史记录</string>
    <string name="year_between_yearbedin">开始年代</string>
    <string name="year_between_yearend">结束年代</string>
    <string name="year_between_yearbt">年代检索</string>
    <string name="year_between_year_beg_hint">请选择开始年代</string>
    <string name="year_between_year_end_hint">请选择结束年代</string>
    <string name="ever_accompaniment">已点伴奏</string>
    <string name="ever_practicing">练唱列表</string>
    <string name="cantata_title">清唱</string>
    <string name="cantata_recording">录制中</string>
    <string name="cantata_play">播放</string>
    <string name="cantata_pause">暂停</string>
    <string name="cantata_reset">重录</string>
    <string name="cantata_finish">完成</string>
    <string name="cantata_editsongname_hint">清唱歌曲名字</string>
    <string name="chorus_recommend">合唱推荐</string>
    <string name="chorus_star">明星合唱</string>
    <string name="chorus_join">加入合唱</string>
    <string name="chorus_participantlist">合唱参与列表</string>
    <string name="learnsing_songword">歌词</string>
    <string name="learnsing_practic">练唱</string>
    <string name="learnsing_mv">MV</string>
    <string name="learnsing_sing">歌唱</string>
    <string name="learnsing_chorus">合唱</string>
    <string name="learnsing_video_chorus">视频合唱</string>
    <string name="learnsing_grade_none">暂无评分，去寻找好声音吧></string>
    <string name="learnsing_friendrank">好友排行</string>
    <string name="learnsing_nationrank">全国排行</string>
    <string name="learnsing_friends_champion">好友擂主</string>
    <string name="ksong">K歌</string>
    <string name="ksong_pause">暂停</string>
    <string name="ksong_play">播放</string>
    <string name="ksong_original">原唱</string>
    <string name="ksong_tone">升降调</string>
    <string name="ksong_midvoice">音量</string>
    <string name="ksong_reset">重录</string>
    <string name="ksong_over">结束</string>
    <string name="ksong_time_initial">00:00</string>
    <string name="ksong_switchmode">切换模式</string>
    <string name="tobeanno_titlename">保存设定</string>
    <string name="tobeanno_voice">音量调节</string>
    <string name="tobeanno_voicevol">人声音量</string>
    <string name="tobeanno_accvol">演奏音量</string>
    <string name="tobeanno_reverb">混响音效</string>
    <string name="tobeanno_reverb_recordroom">录音棚</string>
    <string name="tobeanno_reverb_ktv">KTV</string>
    <string name="tobeanno_reverb_warmth">温暖</string>
    <string name="tobeanno_reverb_magnetism">磁性</string>
    <string name="tobeanno_reverb_clear">空灵</string>
    <string name="tobeanno_reverb_distant">悠远</string>
    <string name="tobeanno_reverb_3d">3D迷幻</string>
    <string name="tobeanno_reverb_oldrecord">老唱片</string>
    <string name="tobeanno_inflexion">变声</string>
    <string name="tobeanno_inflexion_original">原声</string>
    <string name="tobeanno_inflexion_emusic">电音</string>
    <string name="tobeanno_inflexion_croaking">蛙声</string>
    <string name="tobeanno_inflexion_male">男声</string>
    <string name="tobeanno_inflexion_female">女声</string>
    <string name="tobeanno_remake">重录</string>
    <string name="tobeanno_addavideo">添加视频</string>
    <string name="tobeanno_announce">发布</string>
    <string name="tobeanno_save">保存</string>
    <string name="tobeanno_voicemove">人声移动</string>
    <string name="score_synthetical">综合得分</string>
    <string name="score_synthetical_unit">分</string>
    <string name="score_tone">音准</string>
    <string name="score_accuracy">正确性</string>
    <string name="score_stability">稳定性</string>
    <string name="score_stability_left">抖动</string>
    <string name="score_stability_right">平稳</string>
    <string name="score_rhythm">节奏</string>
    <string name="score_rhythm_left">快</string>
    <string name="score_rhythm_right">慢</string>
    <string name="score_longsound_trill">长音和颤音</string>
    <string name="score_longsound">长音</string>
    <string name="score_trill">颤音</string>
    <string name="score_expression">表现力</string>
    <string name="announce">发布</string>
    <string name="announce_finish">完成</string>
    <string name="announce_change">更换</string>
    <string name="announce_changetip">点击背景可修改歌曲详情页幻灯片</string>
    <string name="announce_leaveaword_hint">我刚唱了一首歌曲，快来听听吧</string>
    <string name="announce_dvd">加入专辑</string>
    <string name="announce_secrettoupload">秘密上传</string>
    <string name="announce_secrettoupload_hint">仅自己可见，可分享到QQ、微信、\n微博让好友欣赏</string>
    <string name="announce_share">同步到</string>
    <string name="announce_photoalbum">相册</string>
    <string name="announce_camera">拍照</string>
    <string name="announce_cancel">取消</string>
    <string name="announce_worksnorelease">作品未发布，确定要退出吗？</string>
    <string name="announce_quit">退出</string>
    <string name="mine_production">作品</string>
    <string name="mine_fans">粉丝</string>
    <string name="mine_attention">关注</string>
    <string name="mine_give">送礼</string>
    <string name="mine_comment">评论</string>
    <string name="mine_transmit">转发</string>
    <string name="mine_needlogin">未登录</string>
    <string name="mine_attention_btn">关注</string>
    <string name="mine_hot_btn">热门</string>
    <string name="mine_item_attention_btn">+ 关注</string>
    <string name="mine_attent_cancel">取消</string>
    <string name="mine_playlist_inorder">顺序播放</string>
    <string name="mine_playlist_close">关闭</string>
    <string name="mine_attention_ok">已关注</string>
    <string name="mine_attention_no">未关注</string>
    <string name="mine_workslist_title">我的作品</string>
    <string name="mine_attentiondialog_cancle">确定取消关注？</string>
    <string name="mine_attentiondialog_add">确定添加关注？</string>
    <string name="mine_mytracks_title">我的足迹</string>
    <string name="mine_mytracks_history_singed">已点伴奏</string>
    <string name="mine_mytracks_local_play">本地录音</string>
    <string name="mine_mytracks_my_chorusplay">我的合唱</string>
    <string name="mine_mytracks_chorusplayeduser">合唱参与列表</string>
    <string name="mine_mytracks_listen_history">播放历史</string>
    <string name="mine_mytracks_my_collection">我的收藏</string>
    <string name="mine_mychroussongs">我的伴奏</string>
    <string name="mine_mychroussongs_item_canyu">参与列表</string>
    <string name="mine_myhistorysounds_ok">已点伴奏</string>
    <string name="mine_myhistorysounds_learn">练唱列表</string>
    <string name="mine_attention_need_login_text">登录去关注更多歌友吧</string>
    <string name="news_titlename">通知</string>
    <string name="news_letter">私信</string>
    <string name="news_audience">最近听众</string>
    <string name="news_gift">礼物消息</string>
    <string name="news_sysmsg">系统消息</string>
    <string name="news_comment_attention">已关注人评论</string>
    <string name="news_comment_disconcern">未关注人评论</string>
    <string name="news_comment_reply">回复</string>
    <string name="news_exchangeflowers">兑换鲜花</string>
    <string name="listener_visithome">访问主页</string>
    <string name="listener_visitwork">收听作品</string>
    <string name="setting_titlename">设置</string>
    <string name="setting_datum">个人资料</string>
    <string name="setting_accredit">授权</string>
    <string name="setting_unauthorized">未授权</string>
    <string name="setting_authorized">已授权</string>
    <string name="setting_add_friend">加好友</string>
    <string name="setting_findfriends">查找朋友</string>
    <string name="setting_datum_edit">编辑资料</string>
    <string name="setting_datum_finish">完成</string>
    <string name="setting_datum_album">相册</string>
    <string name="setting_datum_nick">昵称</string>
    <string name="setting_datum_sex">性别</string>
    <string name="setting_datum_sex_man">男</string>
    <string name="setting_datum_sex_female">女</string>
    <string name="setting_datum_birthday">生日</string>
    <string name="setting_datum_sns">登录方式</string>
    <string name="setting_datum_id">ID</string>
    <string name="setting_datum_language">选择语言</string>
    <string name="setting_datum_area">地区</string>
    <string name="setting_inform">通知推送消息</string>
    <string name="setting_inform_switch">接受消息</string>
    <string name="setting_inform_switch_all">接受所有消息</string>
    <string name="setting_other_wipecache">清除缓存</string>
    <string name="setting_wipecache_accompany">伴奏文件</string>
    <string name="setting_wipecache_recording">本地录音</string>
    <string name="setting_wipecache_workcache">收听和发布作品缓存</string>
    <string name="setting_wipecache_delet">删除</string>
    <string name="setting_other_feedback">意见反馈</string>
    <string name="setting_feekback_uploadimg">上传截图</string>
    <string name="setting_feekback_tip">请留下您宝贵的意见，帮助我们不断进步，更好为您服务！</string>
    <string name="setting_feedback_commit">提交</string>
    <string name="setting_feedback_hint">在这里写吧！</string>
    <string name="find_richlist">财富榜</string>
    <string name="find_changecity">切换城市</string>
    <string name="find_selectcountry">选择国家</string>
    <string name="find_searchcity">搜索城市</string>
    <string name="find_curcity">当前城市</string>
    <string name="find_allcity">全部城市</string>
    <string name="find_rich_newjinbang">新晋榜</string>
    <string name="find_rich_daylist">日榜</string>
    <string name="find_rich_totallist">总榜</string>
    <string name="cp_changecity_title">切换城市</string>
</resources>