<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="400px"
        android:layout_height="400px"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_language_zh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/language_cn"
            android:textSize="45px" />

        <TextView
            android:id="@+id/tv_language_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/language_en"
            android:textSize="45px" />

        <TextView
            android:id="@+id/tv_language_jp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/language_jp"
            android:textSize="45px" />
    </LinearLayout>

</LinearLayout>