<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--标题-->
    <com.clicktech.snsktv.widget.titlebar.HeaderView
        android:id="@+id/headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleLeftImg="@mipmap/arrow_left"
        app:titleName="@string/cp_changecity_title"
        app:titleRightText="@string/find_selectcountry" />

    <!--搜索框-->
    <include layout="@layout/layout_custom_citysearch" />

    <!--所有城市-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gainsboro"
        android:drawableStart="@mipmap/find_allcity"
        android:padding="@dimen/gapsize_d"
        android:text="@string/find_allcity"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/typesize_d" />

    <!--列表-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/gapsize_d" />

</LinearLayout>