<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.clicktech.snsktv.widget.titlebar.HeaderView
        android:id="@+id/headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleLeftImg="@mipmap/arrow_left"
        app:titleName="@string/setting_other_feedback" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26px"
        android:layout_marginRight="26px"
        android:layout_marginTop="88px"
        android:background="@mipmap/feedback_upload_bac"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="138px"
            android:src="@mipmap/feedback_uploadimg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="116px"
            android:layout_marginTop="28px"
            android:text="@string/setting_feekback_uploadimg"
            android:textColor="@color/text_light"
            android:textSize="@dimen/typesize_d" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70px"
        android:layout_marginLeft="26px"
        android:layout_marginTop="88px"
        android:text="@string/setting_feekback_tip"
        android:textColor="@color/text_light"
        android:textSize="@dimen/typesize_d" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26px">

        <include layout="@layout/layout_line_1dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/setting_feedback_hint"
        android:padding="@dimen/gapsize_d"
        android:textColor="@color/text_dark"
        android:textColorHint="@color/text_light"
        android:textSize="@dimen/typesize_d" />

    <!--提交-->
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gapsize_a"
        android:layout_marginLeft="44px"
        android:layout_marginRight="44px"
        android:layout_marginTop="@dimen/gapsize_a"
        android:background="@mipmap/feedback_btn"
        android:gravity="center"
        android:text="@string/setting_feedback_commit"
        android:textColor="@color/white"
        android:textSize="@dimen/typesize_c" />

</LinearLayout>