<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.clicktech.snsktv.widget.titlebar.HeaderView
        android:id="@+id/headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleLeftImg="@mipmap/arrow_left"
        app:titleName="@string/setting_other_wipecache" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/gapsize_d">
        <!--伴奏文件-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/gapsize_d">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_wipecache_accompany"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/typesize_d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="153.2M"
                android:textColor="@color/text_medium"
                android:textSize="@dimen/typesize_d" />
        </RelativeLayout>

        <include layout="@layout/layout_line_1dp" />

        <!--本地录音-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/gapsize_d">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_wipecache_recording"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/typesize_d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="153.2M"
                android:textColor="@color/text_medium"
                android:textSize="@dimen/typesize_d" />
        </RelativeLayout>

        <include layout="@layout/layout_line_1dp" />

        <!--收听和发布作品缓存-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/gapsize_d">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_wipecache_workcache"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/typesize_d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="153.2M"
                android:textColor="@color/text_medium"
                android:textSize="@dimen/typesize_d" />
        </RelativeLayout>

        <include layout="@layout/layout_line_1dp" />
    </LinearLayout>

    <!--删除-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150px"
        android:text="@string/setting_wipecache_delet"
        android:textColor="@color/red_light"
        android:textSize="@dimen/typesize_d" />

</LinearLayout>