<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.clicktech.snsktv.widget.titlebar.HeaderView
        android:id="@+id/headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleLeftImg="@mipmap/arrow_left"
        app:titleName="@string/find_changecity"
        app:titleRightText="@string/find_selectcountry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0">

        <EditText
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="84px"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/gapsize_b"
            android:background="@mipmap/searchuser_bac"
            android:drawableLeft="@mipmap/searchuser_img"
            android:gravity="center"
            android:hint="@string/find_searchcity"
            android:paddingLeft="20px"
            android:textColor="@color/text_light"
            android:textColorHint="@color/text_light"
            android:textSize="@dimen/typesize_d" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/lightgray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82px"
        android:background="#f0f0f0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="44px"
            android:text="@string/find_curcity"
            android:textColor="@color/text_light"
            android:textSize="@dimen/typesize_d" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/lightgray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120px">

        <ImageView
            android:id="@+id/img_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="26px"
            android:layout_marginRight="18px"
            android:src="@mipmap/choose_proince_img" />

        <TextView
            android:id="@+id/currentcity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_left"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/typesize_d"
            tools:text="北京" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#ebe9e9" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="22px"
            android:layout_marginLeft="26px"
            android:layout_marginTop="22px"
            android:drawableLeft="@mipmap/item_original"
            android:text="@string/find_allcity"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/typesize_d" />

    </RelativeLayout>

    <com.jcodecraeer.xrecyclerview.XRecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>